--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ layout: content
 <center>Endgame + Writeups = 20$ <br/></center> 
 <center>Jet Flags = 15$<br/></center>
 <center>Jet Flags + Writeup = 20$</center>
+<center>For 2-3 purchases, receive the flag of a challenge, for 4+ receive the flags of a machine</center>
 
 </a></li>
 
