--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ layout: content
 <center>Endgame Flags = 15$<br/></center>  
 <center>Endgame + Writeups = 20$ <br/></center> 
 <center>Jet Flags = 15$<br/></center>
-<center>Jet Flags + Writeup = 20$</center>
-<center>For 2-3 purchases, receive the flag of a challenge, for 4+ receive the flags of a machine</center>
+<center>Jet Flags + Writeup = 20$<br/></center>
+<center>The prices of accounts vary according to the desired level, please contact us for more information</center>
 
 </a></li>
 
