--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: content
 <center>Endgame + Writeups = 20$ <br/></center> 
 <center>Jet Flags = 15$<br/></center>
 <center>Jet Flags + Writeup = 20$<br/></center>
-<center>The prices of accounts vary according to the desired level, please contact us for more information</center>
+<center>Account prices may vary, please contact us for more information</center>
 
 </a></li>
 
